--- a/src/index.html
+++ b/src/index.html
@@ -261,18 +261,18 @@
         >
           <input
             type="text"
-            class="form__name"
+            class="form__name action"
             placeholder="Name"
             required
           >
           <input
             type="email"
-            class="form__email"
+            class="form__email action"
             placeholder="Email"
             required
           >
           <textarea
-            class="form__textarea"
+            class="form__textarea action"
             placeholder="Message"
             required
          ></textarea>
